# I-m-trying-to-make-a-game

./: .gitignore  CMakeLists.txt  README.md  error.txt  error1.txt  main  main.cpp  valgrind.txt
assets/: map1.map  map2.map  mapFix.py
src/: Collision.cpp  Collision.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  Vector2D.cpp  Vector2D.hpp
src/ECS/: Animation.hpp  ColliderComponent.hpp  Components.hpp  ECS.hpp  KeyboardController.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp
